demo/grafana/grafana-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-demo-deploy
  labels:
    app: grafana-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-demo
  template:
    metadata:
      labels:
        app: grafana-demo
    spec:
      containers:
        - name: grafana-demo
          image: grafana/grafana:7.0.0-beta1
          ports:
          - containerPort: 3000
