demo/grafana/grafana-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: grafana-demo-svc
spec:
  selector:
    app: grafana-demo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
